# qt_test_github_actions

./: CMakeLists.txt  CMakePresets.json  Widget.h  widget_test.cpp
.github/workflows/: workflow.yaml
